# micro-rally

./: .gitignore  README.md
config/: map_tile_config.json  settings.json
res/: cars.json  maps.json
res/maps/: ponsa_gp.json  test_map_file.json  test_map_file_2.json
src/: Button.cpp  Button.hpp  ButtonSceneComponent.cpp  ButtonSceneComponent.hpp  CMakeLists.txt  ClientService.cpp  ClientService.hpp  HostService.cpp  HostService.hpp  MainMenuScene.cpp  MainMenuScene.hpp  MenuScene.cpp  MenuScene.hpp  PictureSceneComponent.cpp  PictureSceneComponent.hpp  Scene.hpp  SceneComponent.hpp  SceneManager.cpp  SceneManager.hpp  SettingsScene.cpp  SettingsScene.hpp  TableSceneComponent.cpp  TableSceneComponent.hpp  TextInputSceneComponent.cpp  TextInputSceneComponent.hpp  TextSceneComponent.cpp  TextSceneComponent.hpp  constants.hpp  main.cpp
src/GameObject/: Boost.cpp  Boost.hpp  Box.cpp  Box.hpp  Car.cpp  Car.hpp  CarData.hpp  ContactListener.cpp  ContactListener.hpp  DynamicObject.cpp  DynamicObject.hpp  Game.cpp  Game.hpp  GameMap.cpp  GameMap.hpp  GameMapDrawable.hpp  GameObject.cpp  GameObject.hpp  MapTile.cpp  MapTile.hpp  OilSpill.cpp  OilSpill.hpp  RaceLine.cpp  RaceState.hpp  Tire.cpp  Tire.hpp  TireStack.cpp  TireStack.hpp  boost.cpp  boost.hpp  box.cpp  box.hpp  oilspill.cpp  oilspill.hpp  tirestack.cpp  tirestack.hpp
src/game/: Boost.cpp  Boost.hpp  Box.cpp  Box.hpp  Car.cpp  CarData.hpp  ContactListener.cpp  ContactListener.hpp  DynamicObject.cpp  Game.cpp  Game.hpp  GameMap.cpp  OilSpill.cpp  OilSpill.hpp  RaceLine.hpp  Tire.cpp  TireStack.cpp  TireStack.hpp
src/network/: ClientService.cpp  ClientService.hpp  HostService.cpp  HostService.hpp  Network.hpp
src/scene/: ButtonSceneComponent.cpp  ButtonSceneComponent.hpp  GameScene.cpp  GameScene.hpp  ListSelectorSceneComponent.cpp  ListSelectorSceneComponent.hpp  MenuScene.cpp  MenuScene.hpp  PictureSceneComponent.cpp  PictureSceneComponent.hpp  Scene.hpp  SceneComponent.hpp  SceneManager.cpp  SceneManager.hpp  SliderSceneComponent.cpp  SliderSceneComponent.hpp  TableSceneComponent.cpp  TableSceneComponent.hpp  TextInputSceneComponent.cpp  TextInputSceneComponent.hpp  TextSceneComponent.cpp  TextSceneComponent.hpp
src/settings/: Settings.cpp  Settings.hpp  settings.cpp  settings.hpp  settings.json
